--- a/copy-flash-wpf.csproj
+++ b/copy-flash-wpf.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <None Remove="assets\icons\ic_fluent_clipboard_checkmark_16_filled.ico" />
     <None Remove="assets\icons\ic_fluent_clipboard_checkmark_16_filled.png" />
+    <None Remove="assets\icons\ic_fluent_clipboard_error_16_filled.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -28,6 +29,7 @@
   <ItemGroup>
     <Resource Include="assets\icons\ic_fluent_clipboard_checkmark_16_filled.ico" />
     <Resource Include="assets\icons\ic_fluent_clipboard_checkmark_16_filled.png" />
+    <Resource Include="assets\icons\ic_fluent_clipboard_error_16_filled.png" />
   </ItemGroup>
 
 </Project>
