Add file handling

--- a/copy-flash-wpf.csproj
+++ b/copy-flash-wpf.csproj
@@ -15,6 +15,7 @@
     <None Remove="assets\icons\ic_fluent_clipboard_checkmark_16_filled.ico" />
     <None Remove="assets\icons\ic_fluent_clipboard_checkmark_16_filled.png" />
     <None Remove="assets\icons\ic_fluent_clipboard_error_16_filled.png" />
+    <None Remove="assets\icons\ic_fluent_document_copy_48_filled.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -34,6 +35,7 @@
     <Resource Include="assets\icons\ic_fluent_clipboard_checkmark_16_filled.ico" />
     <Resource Include="assets\icons\ic_fluent_clipboard_checkmark_16_filled.png" />
     <Resource Include="assets\icons\ic_fluent_clipboard_error_16_filled.png" />
+    <Resource Include="assets\icons\ic_fluent_document_copy_48_filled.png" />
   </ItemGroup>
 
   <ItemGroup>
