--- a/copy-flash-wpf.csproj
+++ b/copy-flash-wpf.csproj
@@ -13,11 +13,6 @@
   <ItemGroup>
     <None Remove="assets\audio\damage.wav" />
     <None Remove="assets\icons\ic_fluent_clipboard_checkmark_16_filled.ico" />
-    <None Remove="assets\icons\ic_fluent_clipboard_checkmark_16_filled.png" />
-    <None Remove="assets\icons\ic_fluent_clipboard_error_16_filled.png" />
-    <None Remove="assets\icons\ic_fluent_document_copy_48_filled.png" />
-    <None Remove="assets\icons\ic_fluent_image_copy_28_filled.png" />
-    <None Remove="assets\icons\ic_fluent_play_48_filled.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -35,12 +30,6 @@
     <Content Include="assets\audio\damage.wav">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Resource Include="assets\icons\ic_fluent_clipboard_checkmark_16_filled.ico" />
-    <Resource Include="assets\icons\ic_fluent_clipboard_checkmark_16_filled.png" />
-    <Resource Include="assets\icons\ic_fluent_clipboard_error_16_filled.png" />
-    <Resource Include="assets\icons\ic_fluent_document_copy_48_filled.png" />
-    <Resource Include="assets\icons\ic_fluent_image_copy_28_filled.png" />
-    <Resource Include="assets\icons\ic_fluent_play_48_filled.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -56,6 +45,10 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="assets\icons\ic_fluent_clipboard_checkmark_16_filled.ico" />
   </ItemGroup>
 
 </Project>
