Add main window navigation fundamentals

--- a/CopyFlyouts.csproj
+++ b/CopyFlyouts.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
-    <RootNamespace>copy_flash_wpf</RootNamespace>
+    <RootNamespace>copy_flyouts</RootNamespace>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
