--- a/CopyFlyouts.csproj
+++ b/CopyFlyouts.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="Hardcodet.NotifyIcon.Wpf" Version="1.1.0" />
+    <PackageReference Include="SharpClipboard" Version="3.5.2" />
     <PackageReference Include="WPF-UI" Version="3.0.4" />
   </ItemGroup>
 
