--- a/CopyFlyouts.csproj
+++ b/CopyFlyouts.csproj
@@ -16,9 +16,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Hardcodet.NotifyIcon.Wpf" Version="1.1.0" />
     <PackageReference Include="SharpClipboard" Version="3.5.2" />
     <PackageReference Include="WPF-UI" Version="3.0.4" />
+    <PackageReference Include="WPF-UI.Tray" Version="3.0.4" />
   </ItemGroup>
 
   <ItemGroup>
