Add crash logging
I had CopyFlyouts crash on me for unknown reasons, so I added logging to hopefully figure out why this happens

--- a/CopyFlyouts.csproj
+++ b/CopyFlyouts.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="log4net" Version="2.0.17" />
     <PackageReference Include="SharpClipboard" Version="3.5.2" />
     <PackageReference Include="WPF-UI" Version="3.0.4" />
     <PackageReference Include="WPF-UI.Tray" Version="3.0.4" />
