Add basic update-checking

--- a/CopyFlyouts.csproj
+++ b/CopyFlyouts.csproj
@@ -9,6 +9,7 @@
     <UseWPF>true</UseWPF>
 	  <UseWindowsForms>true</UseWindowsForms>
 	  <ApplicationIcon>Assets\icons\logo.ico</ApplicationIcon>
+	  <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
