--- a/CopyFlyouts.csproj
+++ b/CopyFlyouts.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <None Remove="assets\audio\damage.wav" />
+    <None Remove="Assets\Audio\triangle.wav" />
     <None Remove="Assets\icons\logo-slim-darkmode-disabled.ico" />
     <None Remove="Assets\icons\logo-slim-darkmode.ico" />
     <None Remove="Assets\icons\logo-slim-disabled.ico" />
@@ -39,6 +40,7 @@
     <EmbeddedResource Include="assets\audio\damage.wav">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </EmbeddedResource>
+    <EmbeddedResource Include="Assets\Audio\triangle.wav" />
   </ItemGroup>
 
   <ItemGroup>
