--- a/CopyFlyouts.csproj
+++ b/CopyFlyouts.csproj
@@ -13,7 +13,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Assets\Audio\beep.wav" />
     <None Remove="assets\audio\damage.wav" />
+    <None Remove="Assets\Audio\osu.wav" />
+    <None Remove="Assets\Audio\square.wav" />
     <None Remove="Assets\Audio\triangle.wav" />
     <None Remove="Assets\icons\logo-slim-darkmode-disabled.ico" />
     <None Remove="Assets\icons\logo-slim-darkmode.ico" />
@@ -26,8 +29,8 @@
     <PackageReference Include="log4net" Version="2.0.17" />
     <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.3" />
     <PackageReference Include="SharpClipboard" Version="3.5.2" />
-    <PackageReference Include="WPF-UI" Version="3.0.4" />
-    <PackageReference Include="WPF-UI.Tray" Version="3.0.4" />
+    <PackageReference Include="WPF-UI" Version="3.0.5" />
+    <PackageReference Include="WPF-UI.Tray" Version="3.0.5" />
   </ItemGroup>
 
   <ItemGroup>
@@ -37,9 +40,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Assets\Audio\beep.wav" />
     <EmbeddedResource Include="assets\audio\damage.wav">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </EmbeddedResource>
+    <EmbeddedResource Include="Assets\Audio\osu.wav" />
+    <EmbeddedResource Include="Assets\Audio\square.wav" />
     <EmbeddedResource Include="Assets\Audio\triangle.wav" />
   </ItemGroup>
 
